--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Taaaaab.github.io/shopping-cart",
+  "homepage": "https://taaaaab.github.io/shopping-cart/",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
